# findx

./: README.md  pyproject.toml
backend/: README.md  pyproject.toml
frontend/: index.html  package.json  pnpm-lock.yaml
frontend/src/: App.tsx
frontend/src/components/search-bar/: SearchBar.spec.tsx  SearchBar.tsx
